# sdtrack

./: .CMakeLists.txt.swp  .gitignore  CMakeLists.txt  README.md
CMakeModules/: BAConfig.cmake  FindOpenCV2.cmake
applications/: CMakeLists.txt
applications/ceres_tracker/: CMakeLists.txt  ceres_cost_terms.h  ceres_tracker_cvars.h  sd_ceres_tracker.cpp  sd_ceres_vi_tracker.cpp
applications/common/: chi2inv.h  color_palette.h  common_cvars.h  etc_common.h  gl_simple_object.h  gui_common.h  math_types.h  timer.h  timer_view.h
applications/self_cal/: AutoDiffLocalParamSO3.h  CMakeLists.txt  CeresCostFunctions.h  error.h  ftest.h  online_calibrator.cpp  online_calibrator.h  sd_selfcal.cpp  selfcal-cvars.h
applications/vibatch/: CMakeLists.txt  sd_vibatch.cpp  vibatch-cvars.h
applications/vitracker/: CMakeLists.txt  sd_vitracker.cpp  vitrack-cvars.h
applications/votracker/: CMakeLists.txt  sd_votracker.cpp  votrack-cvars.h
applications/vtracker/: CMakeLists.txt  sd_vtracker.cpp  vtrack-cvars.h
include/sdtrack/: generic_tracker.h  keypoint.h  options.h  parallel_algos.h  semi_dense_tracker.h  track.h  utils.h
src/: parallel_algos.cpp  semi_dense_tracker.cpp
